--- a/ContextualAction/app/src/main/res/layout/activity_main.xml
+++ b/ContextualAction/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,10 @@
 
     </include>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:layout_marginTop="20dp"
-        />
+        android:id="@+id/recycler_view"
+        android:scrollbars="vertical"/>
 
 </LinearLayout>
