--- a/ToolbarTraining2/app/src/main/res/menu/menu_main.xml
+++ b/ToolbarTraining2/app/src/main/res/menu/menu_main.xml
@@ -6,20 +6,25 @@
         android:title="Settings"
         android:icon="@drawable/ic_action_settings"
         app:showAsAction="ifRoom"
-        android:orderInCategory="3"
-        ></item>
+        android:orderInCategory="3"/>
+
+    <item android:id="@+id/action_search"
+        android:title="Share"
+        android:icon="@drawable/ic_action_search"
+        app:showAsAction="always|collapseActionView"
+        android:actionViewClass="android.support.v7.widget.SearchView"
+        android:orderInCategory="1"/>
+
     <item android:id="@+id/action_share"
         android:title="Share"
         android:icon="@drawable/ic_action_share"
         app:showAsAction="ifRoom"
-        android:orderInCategory="2"
-        ></item>
+        android:orderInCategory="2"/>
+
     <item android:id="@+id/action_delete"
         android:title="Delete"
         android:icon="@drawable/ic_action_delete"
         app:showAsAction="ifRoom"
-        android:orderInCategory="1"
-
-        ></item>
+        android:orderInCategory="1"/>
 
 </menu>
