--- a/ContextualAction/app/src/main/res/layout/card_view_layout.xml
+++ b/ContextualAction/app/src/main/res/layout/card_view_layout.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/card">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -15,34 +15,42 @@
             android:padding="10dp">
 
             <ImageView
+                android:id="@+id/image"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:id="@+id/image"
-                android:src="@drawable/camel1"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" Animal Name"
-                android:textStyle="bold"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_toRightOf="@+id/image"
-                android:layout_alignParentTop="true"
-                android:textSize="20sp"
-                android:id="@+id/txt_animals_name" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" Animal Mail"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_toRightOf="@+id/image"
-                android:layout_below="@+id/txt_animals_name"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:id="@+id/txt_animals_mail"
-                />
+                android:src="@drawable/camel1" />
 
+            <TextView
+                android:id="@+id/txt_animals_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/image"
+                android:text=" Animal Name"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_animals_mail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txt_animals_name"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/image"
+                android:text=" Animal Mail"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/image"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="31dp"
+                android:id="@+id/chkbox_recyclerView"/>
 
 
         </RelativeLayout>
