--- a/Service93S/app/src/main/res/layout/activity_main.xml
+++ b/Service93S/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,20 @@
     >
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:id="@+id/start_button"
         android:text="@string/start"
+        android:gravity="center"
          />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:id="@+id/start_outservice_button"
+        android:text="@string/start_out"
+        android:gravity="center"
+        />
 
 </LinearLayout>
