Complete Bind Service

--- a/BindService98S/app/src/main/res/layout/activity_main.xml
+++ b/BindService98S/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="30dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
-        android:id="@+id/txtInterval"
+        android:id="@+id/txtRandomNumber"
         android:text="Hello World!" />
     <Button
         android:layout_width="match_parent"
@@ -43,8 +43,14 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/btnUnBind"
+        android:id="@+id/btnUnbind"
         android:text="@string/unbind"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnGetNumber"
+        android:text="Get Random Number"/>
+
 
 
 </LinearLayout>
