--- a/SQlite34S/app/src/main/res/layout/activity_main.xml
+++ b/SQlite34S/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:inputType="text"
+            android:inputType="numberDecimal"
             android:maxLines="1" />
     </LinearLayout>
 
@@ -89,11 +89,11 @@
             android:text="Read" />
 
         <Button
-            android:id="@+id/btnClear"
-            android:layout_width="0dp"gchdfhg
+            android:id="@+id/btnDelete"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Clear" />
+            android:text="Delete" />
     </LinearLayout>
 
 
