--- a/RetrofitTest/app/src/main/res/layout/activity_main.xml
+++ b/RetrofitTest/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <ListView
         android:id="@+id/pagination_list"
         android:layout_height="wrap_content"
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
