--- a/Loader135S/app/src/main/res/layout/activity_main.xml
+++ b/Loader135S/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/rgTimeFormat"
         android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="@+id/rgTimeFormat" />
+        app:layout_constraintRight_toRightOf="@+id/rgTimeFormat"
+        android:onClick="getTimeClick"/>
 
     <Button
         android:id="@+id/btnObserver"
@@ -43,7 +44,8 @@
         app:layout_constraintRight_toRightOf="@+id/btnGetTime"
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/btnGetTime"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.0"
+        android:onClick="observerClick"/>
 
     <RadioGroup
         android:id="@+id/rgTimeFormat"
