--- a/RecyclerViewTraining2/app/src/main/res/layout-v21/card_view_layout.xml
+++ b/RecyclerViewTraining2/app/src/main/res/layout-v21/card_view_layout.xml
@@ -14,7 +14,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:src="@drawable/camel1"
-            android:transitionName="Shared Element"/>
+            android:transitionName="@string/shared_element"/>
 
         <TextView
             android:id="@+id/txtAnimalsName"
@@ -27,7 +27,7 @@
             android:text=" Animal Name"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:transitionName="@string/shared_element_name"/>/>
+            android:transitionName="@string/shared_element_name"/>
 
         <TextView
             android:id="@+id/txtAnimalsMail"
